# MyLac

./: .env.example  .gitignore  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  test.py  test_mineru.py
modules/: llm_init.py  logger.py
modules/pipelines/: load_and_chunk_pdf.py  process_mineru_pdfs.py  upload_to_qdrant.py
modules/prompts/: prompts.py
